lab1/Test/L1-A-6-1.output
Error Type B at Line 31
Error Type B at Line 36
Error Type A at Line 39
Error Type A at Line 39
