lab1/Test/L1-A-6-1.cmm
struct {
  float QgUh3qyknh5_oKJssy = m_PUeD1p21U3G ( - - ! 
    zr9TWNjRT = yqHS ( Vq0klBaHb ) = r9ALh4oGDCFPA5i9 
    ) [ - - 362283805 * bKh ( viHQyLnbma ) >= LRo_vVzd 
    ( gYCuJRHd ) * bHMSeGND4JDyx8 - LG4TOxKq1RWqpHlO + 
    gV6Bloabk7dI54yz6 - qiD1PEi + n + xpI1AtM287eA812Fe 
    - yNc8Jdr + gCRxoCdZEHnYM_ == WN * PYSLcGAwfPiYpVP46 
    * NSnwBD526Ts4ltp + fp0_uLqZ <= wXAaFdvWu ( ) / LfVBFkw0khLF 
    / EhSnn8HTQxtqpiWp + J - S1LN4_HaqaZTbzAB5 < RNSAH8M1Au67_cIh 
    ( ) [ LyIh7cp4iBF ] * KflNTdJYpA6rovDThIGi * Q + mmHXh_deZkli 
    + gO46fm1k + ETy7tr7bhjvbNJCTGB + n3tEs5f2 - c1lw4GoDh694 
    != ! NJYLrkydBBPMNcnsVj_ / RI1Xpj8lNev / L0ck2VzZYtdMnmAL 
    / o3lZAGwA2jYSso7Ggk / L1bVp6d / JA1lAqq4oWA / iTCpy5uUuX949HxI 
    * CAhFaHH + c - gICJ - c7UFLAe8vMWOiSFhwzD + Bs1w7KT7 
    != ! u / ZCOEN5QTMy5H_vJ5 * ZiJCYgyqtzxPNST + SweXtmhQLkrngRVp 
    > - qhShAQK8Fo * enpSJ8ixxBfMP5CH / v_P <= - J004o0ne0a 
    - cHp2oH0IjOIxUBZ - bau2cY - Laoi4CU37_7h <= - xFcHoOV2Ts 
    * c1ROv6nO9GigmXWq == BqR ( pfsHhROQgP4rN3HF ) . _1iV7EwDIYUgtE 
    . AjLAapn8 [ zR ] / Q8Vh5202hvLGgEtKG + vU6H <= Zf 
    . s7jW9pHTzW4XG >= ! IhLsKxKs + qEbiVWjrmyV <= ! YG9uyM6bZSDZsT6y5Gl 
    && ! IkinMY9bSm8k - rMQp - FMapUnbJ - AZX1_kG8CSWA6p8 
    != LOzlk5ipX122g && ! EWQgpR6HNdmSayPlum_9 * wRQeQMsk_PJ 
    * cwZNpGd0s6hQh9n6 * aHWGb5qGqwz * T - Dg4UDMZ3sy 
    <= bSxnYvd2FkXHvg4D <= ApmD8qszUfDTM < rj3clw && I_dJVgZBE_g9J_3IB_gi 
    ( ) . ZSlWantZ3eE + CDgb7esSAaQIW + uaiYfzr1dIjppteKZQVS 
    + vk4Fat - xZOttoSk_uIOn32 - N9Je9FK0ysxCpXf + Yx_FNy2LPyZ 
    - w5THf9CO2 + LaFgnYa + O8lOmr5K5e_22zZqLAar - p5AnMVThp9Fr2pv3 
    + wWogsAPlr - YPv8MOSxHGEtAe2UedHB > P0jZ3NMw9l_x7ScV9RJm 
    > KzZ2QXtPZn3xSXWDN7t >= Z1hZNgy4fE_D || - ZLF / H9i4z5ZeanAtaB 
    - MXirN || - hQeBxtZbUbHr * mPV8J9J - PQBpIHMeBqRt 
    - + KizH4RP4Slc5ZBi || - Sznh1EloUoZ7pD && QQeOKnb25IRXu 
    && lDrgypf && N1N3jyvSJ03ZEoUzkmi ] / - R776EUe_xr 
    ( Ulq ) * ! - 2073130658 / ! NErRT ( ) . klSwMHWh 
    <= ! - - CfiMEqkQtJL1V8D / - R - - beB7JmyMxQYtEy 
    < jlsm80NAMm6j2ophaFK ( ) / ! LZ03_62 ;
}N5xKRbgb7K5UIAZk , eyWqQpmhZgYJLF 434503501 ] 

;
':